# openab

./: .env.example  .gitignore  README.md  README.zh-CN.md  config.example.json  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
assets/: README.md
cursor_telegram_bot/: __init__.py  __main__.py  agent_runner.py  bot.py  cli.py  i18n.py
docs/: README.md  README.zh-CN.md  STRUCTURE.md  guide.md
docs/en/: STRUCTURE.md  guide.md
docs/zh-CN/: README.md  STRUCTURE.md  guide.md
openab/: __init__.py  __main__.py
openab/agents/: __init__.py  claude.py  codex.py  cursor.py  gemini.py  openclaw.py
openab/api/: __init__.py  app.py
openab/chats/: __init__.py
openab/chats/discord/: bot.py
openab/chats/telegram/: __init__.py  bot.py
openab/cli/: main.py  service_linux.py
openab/core/: __init__.py  codex_sessions.py  config.py  cursor_chats.py  cursor_session_state.py  detect_cli.py  i18n.py
openab/core/i18n/: __init__.py  bot.py  cli.py
